syntax = "proto3";

package envoy.extensions.filters.http.credential_injector.v3;

import "envoy/config/core/v3/extension.proto";

import "xds/annotations/v3/status.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.credential_injector.v3";
option java_outer_classname = "CredentialInjectorProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/http/credential_injector/v3;credential_injectorv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;
option (xds.annotations.v3.file_status).work_in_progress = true;

// [#protodoc-title: Credential Injector]
// [#not-implemented-hide:]
// Credential Injector :ref:`configuration overview <config_http_filters_credential_injector>`.
// [#extension: envoy.filters.http.credential_injector]

// Credential Injector injects credentials into outgoing HTTP requests. The filter configuration is used to retrieve the credentials, or
// they can be requested through the OAuth2 client credential grant. The credentials obtained are then injected into the Authorization header
// of the proxied HTTP requests, utilizing either the Basic or Bearer scheme.
//
// Notice: This filter is intended to be used for workload authentication, which means that the identity associated with the inserted credential
// is considered as the identity of the workload behind the envoy proxy(in this case, envoy is typically deployed as a sidecar alongside that
// workload). Please note that this filter does not handle end user authentication. Its purpose is solely to authenticate the workload itself.
//
// Here is an example of CredentialInjector configuration with BasicAuth credential.
//
//  .. code-block:: yaml
//
//  overwrite: true
//  credential:
//    typed_config:
//      "@type": type.googleapis.com/envoy.extensions.credentials.basic.v3.BasicAuth
//      username: test
//      password:
//        name: password
//        sds_config:
//          path_config_source:
//            path: /etc/envoy/password.yaml
//
message CredentialInjector {
  // Whether to overwrite the value or not if the injected headers already exist.
  // Value defaults to false.
  bool overwrite = 1;

  // The credential to inject into the proxied requests
  // [#extension-category: envoy.credentials]
  config.core.v3.TypedExtensionConfig credential = 2 [(validate.rules).message = {required: true}];
}
